# decklet-extensions

./: .gitignore  README.md
.github/workflows/: ci.yml
decklet-backfill/: .gitignore  AGENTS.md  PLAN.md  README.md  SKILL.md  decklet-backfill.el
decklet-backfill/specs/: decklet-backfill.spec.md
decklet-backfill/tests/: decklet-backfill-test.el  fsrs.el
decklet-calendar/: README.md  decklet-calendar.el
decklet-edge-tts/: .gitignore  AGENTS.md  README.md  decklet-edge-tts.el  pyproject.toml
decklet-edge-tts/specs/: decklet-edge-tts.spec.md
decklet-edge-tts/tests/: decklet-edge-tts-test.el  decklet.el
decklet-edge-tts/tools/: decklet_tts.py
decklet-fsrs-tuner/: .gitignore  README.md  decklet-fsrs-tuner.el  pyproject.toml
decklet-fsrs-tuner/specs/: decklet-fsrs-tuner.spec.md
decklet-fsrs-tuner/tests/: decklet-fsrs-tuner-test.el  decklet.el
decklet-fsrs-tuner/tools/: decklet_fsrs_tuner.py
decklet-images/: .gitignore  README.md  decklet-images.el
decklet-images/tests/: decklet-images-test.el  decklet.el
decklet-import/: README.md  decklet-import.el
decklet-import/tests/: decklet-import-test.el  decklet.el
decklet-skills/: README.md
decklet-skills/decklet-card-back/: SKILL.md  card-spec.md
decklet-sound/: AGENTS.md  README.md  decklet-sound.el
decklet-sound/tests/: decklet-sound-test.el  decklet.el
decklet-stats/: README.md  decklet-stats.el
decklet-stats/tests/: decklet-stats-test.el
scripts/: check-all.sh  check-byte-compile.sh  check-checkdoc.sh  check-indent.sh  check-tests.sh
