[project]
name = "decklet-edge-tts"
version = "0.1.0"
description = "Generate Decklet pronunciation audio with edge-tts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "edge-tts>=6.1.19",
  "send2trash>=1.8.3",
]

[project.scripts]
decklet-edge-tts = "tools.decklet_tts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
