[project]
name = "decklet-fsrs-tuner"
version = "0.1.0"
description = "Fine-tune FSRS parameters from the Decklet persistent review log"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fsrs[optimizer]>=6.0.0",
]

[project.scripts]
decklet-fsrs-tuner = "tools.decklet_fsrs_tuner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
